--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
+</head>
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.b2aca5be9e7b8cc1a1b4.js" type="module"></script><script src="polyfills-es2015.707fe33a73ba6b994c2b.js" type="module"></script><script src="runtime-es5.a6586930f507951256e4.js" nomodule defer></script><script src="polyfills-es5.b00ebf2fb448ceddf30d.js" nomodule defer></script><script src="main-es2015.fa78ad63e29dae4301c3.js" type="module"></script><script src="main-es5.59fb1f38326465e8507e.js" nomodule defer></script></body>
+<script src="runtime-es2015.js" type="module"></script><script src="polyfills-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es5.js" nomodule defer></script></body>
 </html>
